--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<
+
+  <<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
@@ -132,11 +134,7 @@
     }
   </style>
 </head>
-<body>
-
-  <header>
-    <h1>NEXTIME</h1>
-    <button id="toggle-theme">🌙</button>
+<body>n id="toggle-theme">🌙</button>
   </header>
 
   <!-- Primeira prateleira -->
@@ -281,7 +279,18 @@
       <a href="NEXTBLOG.html" target="_blank">VER</a>
     </div>
 
+      <div class="produto">
+      <img src="lç.png" alt="produto 10" />
+    <h2>NEXT GAME STORE</h2>
+    <p>Todos os jogos disponiveis de graça</p>
+    <p>Muitos via Utorrent</p>
+    <a href="mm.html"target="_blank">ENTRAR</a>
+      </div>
+      
 
+      
+
+      </div>
 
 
 
@@ -303,5 +312,6 @@
 
 </body>
 </html>
+
 
 
