--- a/index.html
+++ b/index.html
@@ -292,6 +292,23 @@
       <p>Todos os jogos disponíveis de graça</p>
       <a href="mm.html" target="_blank">ENTRAR</a>
     </div>
+    
+      <div class="produto"
+      <img src="nbg.jpeg" atl="produto 19" />
+      <h2>NEXTPROMOS</h2>
+      <p>Acesso a promos separada por editores next</p>
+      <a href="NEXOP.html" target="_blank"/>ABRIR</a>
+      </div>
+
+      <div class="produto">
+      <img src=" " alt="produto" />
+      <h2>EM BREVE</h2>
+      <p>coming</p>
+      <a href="" target="_blank" />BREVE</a>
+      </div>
+
+
+    
   </div>
 
   <footer>
