--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="produto"
       <img src="nbg.jpeg" atl="produto 19" />
       <h2>NEXTPROMOS</h2>
-      <p>Acesso a promos separada por editores next</p>
+      <p>Acesse a promos separada por editores next</p>
       <a href="NEXOP.html" target="_blank"/>ABRIR</a>
       </div>
 
