--- a/Index.html
+++ b/Index.html
@@ -3,56 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RetroFutur Specs</title>
+    <title>Hardware Specs</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+        /* Fonte elegante no estilo Apple */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
         body {
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(135deg, #0a0a0f, #1a1a40);
-            color: #00ffe7;
+            font-family: 'Inter', sans-serif;
+            background-color: #f5f5f7;
+            color: #1d1d1f;
             margin: 0;
             padding: 0;
         }
 
+        /* Cabeçalho */
         header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background: #111122;
-            border-bottom: 2px solid #00ffe7;
+            background: #ffffffcc;
+            backdrop-filter: blur(10px);
+            position: sticky;
+            top: 0;
+            border-bottom: 1px solid #e0e0e0;
         }
 
         header h1 {
-            font-size: 1.8rem;
-            text-shadow: 0 0 5px #00ffe7, 0 0 15px #00ffe7;
+            font-size: 1.4rem;
+            font-weight: 600;
+            letter-spacing: -0.5px;
         }
 
+        /* Barra de pesquisa */
         .search-container {
             display: flex;
-            gap: 5px;
+            gap: 8px;
         }
 
         .search-container input {
-            padding: 8px;
-            border: 2px solid #00ffe7;
-            background: #0f0f1a;
-            color: #00ffe7;
+            padding: 8px 12px;
+            border: 1px solid #d2d2d7;
+            border-radius: 8px;
             outline: none;
-            border-radius: 4px;
+            background: #fff;
+            transition: 0.2s;
+            font-size: 0.95rem;
+        }
+
+        .search-container input:focus {
+            border-color: #0071e3;
+            box-shadow: 0 0 0 2px rgba(0, 113, 227, 0.2);
         }
 
         .search-container button {
-            background: #00ffe7;
+            background: #0071e3;
             border: none;
-            color: #0a0a0f;
-            padding: 8px 12px;
+            color: #fff;
+            padding: 8px 14px;
             cursor: pointer;
-            font-weight: bold;
-            border-radius: 4px;
+            border-radius: 8px;
+            font-weight: 500;
+            transition: 0.2s;
         }
 
+        .search-container button:hover {
+            background: #005bb5;
+        }
+
+        /* Container de cards */
         .cards-container {
             display: flex;
             flex-wrap: wrap;
@@ -61,43 +80,48 @@
             justify-content: center;
         }
 
+        /* Caixas (game box adaptadas) */
         .game-box {
-            background: rgba(15, 15, 30, 0.85);
-            border: 2px solid #00ffe7;
+            background: #fff;
+            border-radius: 12px;
             padding: 20px;
-            width: 250px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px #00ffe7, 0 0 30px rgba(0,255,231,0.5);
-            transition: transform 0.2s ease-in-out;
+            width: 260px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+            border: 1px solid #e0e0e0;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
         .game-box:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px #00ffe7, 0 0 40px rgba(0,255,231,0.7);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 14px rgba(0,0,0,0.08);
         }
 
         .game-box h2 {
             margin-top: 0;
-            color: #ff00aa;
-            text-shadow: 0 0 5px #ff00aa, 0 0 15px #ff00aa;
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-bottom: 10px;
         }
 
         .game-box ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
 
         .game-box li {
-            margin: 5px 0;
+            margin: 6px 0;
+            font-size: 0.92rem;
+            color: #555;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>RetroFutur Specs</h1>
+        <h1>Hardware Specs</h1>
         <div class="search-container">
             <input type="text" id="searchBar" placeholder="Buscar hardware...">
-            <button onclick="searchItem()">🔍</button>
+            <button onclick="searchItem()">Buscar</button>
         </div>
     </header>
 
